--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "[yaml]": {
         "editor.autoIndent": "full"
-    }
+    },
+    "files.autoSave": "afterDelay",
+    "editor.wordWrap": "on"
 }
