--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.39",
-    "@astrojs/mdx": "^0.19.7",
-    "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/tailwind": "^2.1.3",
+    "@astrojs/mdx": "^3.1.7",
+    "@astrojs/sitemap": "^3.2.0",
+    "@astrojs/tailwind": "^5.1.1",
     "@fontsource-variable/inter": "^5.0.15",
     "@tailwindcss/typography": "^0.5.10",
-    "astro": "^1.3.1",
+    "astro": "^4.15.11",
     "astro-icon": "^0.8.1",
     "astro-navbar": "^2.3.0",
     "astro-seo": "^0.8.0",
-    "sharp": "^0.33.0",
-    "tailwindcss": "^3.3.5"
+    "sharp": "^0.33.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
