--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "astro-icon": "^0.8.1",
     "astro-navbar": "^2.3.0",
     "astro-seo": "^0.8.0",
+    "mdast-util-to-hast": "^13.2.0",
+    "remark-rehype": "^8.0.0",
     "sharp": "^0.33.0"
   },
   "devDependencies": {
