--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build && node /scripts/minify-html.js",
+    "build": "astro build",  
     "preview": "astro preview",
     "astro": "astro",
     "build:css": "postcss src/styles/*.css -d dist/styles/"
